--- a/MvcMovie/Views/Movies/Delete.cshtml
+++ b/MvcMovie/Views/Movies/Delete.cshtml
@@ -30,12 +30,19 @@
             @Html.DisplayFor(model => model.Genre)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Price)
+            @Html.DisplayNameFor(model => model.Rating)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Price)
+            @Html.DisplayFor(model => model.Rating)
+        </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.Rating)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.Rating)
         </dd>
     </dl>
+
     
     <form asp-action="Delete">
         <input type="hidden" asp-for="Id" />
