--- a/MvcMovie/Views/Movies/Edit.cshtml
+++ b/MvcMovie/Views/Movies/Edit.cshtml
@@ -36,6 +36,11 @@
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
             </div>
+            <div class="form-group">
+                <label asp-for="Rating" class="control-label"></label>
+                <input asp-for="Rating" class="form-control" />
+                <span asp-validation-for="Rating" class="text-danger"></span>
+            </div>
         </form>
     </div>
 </div>
